# angular

./: package.json  pnpm-lock.yaml
adev/shared-docs/components/table-of-contents/: table-of-contents.component.ts
adev/shared-docs/components/viewers/docs-viewer/: docs-viewer.component.ts
adev/shared-docs/pipeline/api-gen/rendering/: index.ts  processing.ts
adev/shared-docs/pipeline/api-gen/rendering/styling/: css-classes.ts
adev/shared-docs/pipeline/api-gen/rendering/templates/: class-member.tsx  class-reference.tsx  cli-card.tsx  (+11 more)
adev/shared-docs/styles/: _reference.scss
adev/shared-docs/styles/docs/: _code.scss
adev/src/app/: routes.ts
adev/src/app/features/anim-test/: anim-test.component.html  anim-test.component.scss  anim-test.component.ts  animation-definition.ts
adev/src/app/features/home/: animation-layer.directive.ts  home.component.html  home.component.scss  home.component.ts
adev/src/app/features/new-anim/: constants.ts  definition.ts  new-anim.component.html  new-anim.component.scss  new-anim.component.ts
adev/src/app/features/styles/: docs-viewer.scss
adev/src/app/features/update/: recommendations.ts  update.component.scss  update.component.ts
dev-app/src/app/: app.html  app.ts
devtools/projects/ng-devtools-backend/src/lib/: BUILD.bazel  client-event-subscribers.ts  index.ts  interfaces.ts
devtools/projects/ng-devtools-backend/src/lib/component-inspector/: BUILD.bazel  component-inspector.ts
devtools/projects/ng-devtools-backend/src/lib/directive-forest/: BUILD.bazel  control-flow.ts  ltree.ts  manager.ts  render-tree.ts
devtools/projects/ng-devtools-backend/src/lib/directive-forest/component-tree/: BUILD.bazel  component-tree.ts
devtools/projects/ng-devtools-backend/src/lib/directive-forest/identity-tracker/: BUILD.bazel  identity-tracker.ts
devtools/projects/ng-devtools-backend/src/lib/directive-forest/property-mutation/: BUILD.bazel  property-mutation.ts
devtools/projects/ng-devtools-backend/src/lib/directive-forest/tree-strategies/: BUILD.bazel  ltree.ts  render-tree.ts
devtools/projects/ng-devtools-backend/src/lib/directive-forest/utils/: BUILD.bazel  control-flow.ts
devtools/projects/ng-devtools-backend/src/lib/highlighter/: index.ts
devtools/projects/ng-devtools-backend/src/lib/hooks/: capture.ts  identity-tracker.ts
devtools/projects/ng-devtools-backend/src/lib/hooks/profiler/: native.ts
devtools/projects/ng-devtools-backend/src/lib/ng-debug-api/: ng-debug-api.spec.ts  ng-debug-api.ts
devtools/projects/ng-devtools-backend/src/lib/profiling/: BUILD.bazel  capture.ts  timing-api.ts
devtools/projects/ng-devtools-backend/src/lib/profiling/profiler/: BUILD.bazel  native.ts  polyfill.ts  shared.ts
devtools/projects/ng-devtools-backend/src/lib/state-serializer/: BUILD.bazel
devtools/projects/ng-devtools/src/: BUILD.bazel
devtools/projects/ng-devtools/src/assets/: BUILD.bazel
devtools/projects/ng-devtools/src/lib/: BUILD.bazel  devtools.component.html  devtools.component.scss  devtools.component.ts
devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/property-pane/if-view/: BUILD.bazel  if-view.component.html  if-view.component.ts
devtools/projects/ng-devtools/src/styles/: BUILD.bazel  _colors.scss  _global.scss  _inputs.scss  _typography.scss  chrome.scss  firefox.scss
devtools/projects/protocol/src/lib/: debug-logger.ts  message-bus.ts  messages.ts  priority-aware-message-bus.ts
devtools/projects/shared-utils/: BUILD.bazel
devtools/projects/shared-utils/src/: public-api.ts
devtools/projects/shared-utils/src/lib/: synced-logger.ts
devtools/projects/shell-browser/src/app/: BUILD.bazel  backend.ts  chrome-message-bus.ts  chrome-window-extensions.ts  content-script.ts  detect-angular-for-extension-icon.ts  same-page-message-bus.ts  tab_manager.ts  tab_manager_spec.ts
devtools/src/: BUILD.bazel  iframe-message-bus.ts  zone-unaware-iframe-message-bus.ts
devtools/src/app/demo-app/: BUILD.bazel  demo-app.component.html  demo-app.component.scss  demo-app.component.ts  demo-app.routes.ts
goldens/public-api/core/: index.api.md
(+167 files in other folders)
