load("//devtools/tools:defaults.bzl", "ng_project", "sass_binary")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "if_view_styles",
    src = "if-view.component.scss",
)

ng_project(
    name = "if-view",
    srcs = [
        "if-view.component.ts",
    ],
    angular_assets = [
        "if-view.component.html",
        ":if_view_styles",
        "//devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/property-pane/styles:view_tab_styles",
    ],
    deps = [
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/material",
        "//:node_modules/rxjs",
        "//devtools/projects/protocol",
    ],
)
